<resources>
    <string name="app_name">My Chat</string>
    <string name="hi_leo_whats_up_ni_need_new_logo_for_group">Hi Leo. Whats up ??\nI need new logo for group.</string>
    <string name="simple_minimal_and_beauti">Simple, minimal and beauti..</string>
    <string name="ok_i_ll_start_next_week_nsend_me_documents_today">Ok, i\'ll start next week.\nSend me documents today.</string>
    <string name="oh_that_s_great">Oh. That\'s great 😍</string>
    <string name="_22_30">22:30</string>
    <string name="_22_31">22:31</string>
    <string name="_22_32">22:32</string>
    <string name="_22_33">22:33</string>
    <string name="done_sign">done sign</string>
    <string name="emoji">emoji</string>
    <string name="attachfile">attachFile</string>
    <string name="mic">mic</string>
</resources>